--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <Company>VkGraphBuilder.BusinessLogic</Company>
         <Product>VkGraphBuilder.BusinessLogic</Product>
         <AssemblyName>VkGraphBuilder.BusinessLogic</AssemblyName>
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
+      <PackageReference Include="NamesGenerator" Version="1.0.0" />
       <PackageReference Include="protobuf-net" Version="3.1.22" />
       <PackageReference Include="VkNet" Version="1.72.0" />
     </ItemGroup>
