--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <AssemblyName>VkGraphBuilder.WebUI</AssemblyName>
         <RootNamespace>VkGraphBuilder.WebUI</RootNamespace>
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
+      <ProjectReference Include="..\NetworkXWrapper\NetworkXWrapper.csproj" />
     </ItemGroup>
 
 </Project>
