--- a/WebUI/Properties/launchSettings.json
+++ b/WebUI/Properties/launchSettings.json
@@ -23,7 +23,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "PORT": "5000"
       },
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:5000/Home/Groups"
     }
   }
 }
